@@ -3,6 +3,7 @@ Revision 0.0.4, 01-07-2015
 
 * Fix to MRO compliance for mixin classes generation at pysnmp backend
 * Fix to repeated imports in generated code at pysnmp backend
+* Fix to mibdump tool to properly handle the --generate-mib-texts option.
 
 Revision 0.0.3, 28-06-2015
 --------------------------
